// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archieved Task 1`] = `
<div
  className="maintask"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "border": "none",
        }
      }
      type="text"
      value="Task1"
    />
  </div>
  <div
    className="star"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default Task 1`] = `
<div
  className="maintask"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "border": "none",
        }
      }
      type="text"
      value="Task1"
    />
  </div>
  <div
    className="star"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned Task 1`] = `
<div
  className="maintask"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "border": "none",
        }
      }
      type="text"
      value="Task1"
    />
  </div>
  <div
    className="star"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </a>
  </div>
</div>
`;
